# rust

./: README.md  app  main  main.cpp
NES/: Cargo.toml
NES/src/: lib.rs  main.rs
app.dSYM/Contents/Resources/DWARF/: app
budget-app/: Cargo.toml
budget-app-svelte/: package-lock.json  package.json
budget-app-svelte/src-tauri/: Cargo.toml  tauri.conf.json
budget-app/src-tauri/: Cargo.toml  tauri.conf.json
closure/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
stock_egui/project/: Cargo.toml
stock_egui/project/egui_app/: Cargo.toml
stock_egui/project/egui_app/src/: app.rs  main.rs
stock_egui/project/finnhub_api/: Cargo.toml
stock_egui/project/finnhub_api/src/: lib.rs
