[package]
name = "egui_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.1"
eframe = "0.27.2"
egui = "0.27.2"
serde = "1.0.202"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
finnhub_api = {path="../finnhub_api"}

[profile.dev.package."*"]
opt-level = 2