[package]
name = "finnhub_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.4", features=["json"], optional = true}
serde = "1.0.202"
serde_json = "1.0.117"
thiserror = "1.0.61"
ureq = {version="2.9.7", features = ["json"]}
url = "2.5.0"

[features]
async = [
    "reqwest"
]
